# spotify-uris

./: .env  .gitignore  CLAUDE.md  README.md  backup_create.py  backup_restore.py  db_init.py  docker-compose.yml  load_csv.py  load_csv_engine.py  models.py  mpd_loader.py  pyproject.toml  sql_templates.py  staging_stats.py
csv_to_db/: 6.6mil_loader.py
data_to_csv/: 6.6mil_to_csv.py  db_utils.py  mpd_to_csv.py  one_mil_songs_to_csv.py  one_mil_tracks_to_csv.py  six_mil_to_csv.py  ten_mil_beatport_to_csv.py
loaders/: 6.6mil_loader.py  mpd_loader.py  one_mil_songs_loader.py  one_mil_tracks_loader.py  six_mil_loader.py  ten_mil_beatport_loader.py
stats/: association_changes.py  association_stats.py  column_changes.py  dry_run_stats.py  entity_stats.py  side_effect_stats.py  staging_stats.py
