[project]
name = "spotify-uris"
version = "0.1.0"
description = " Code to try and grab all Spotify URIs. "
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "orjson>=3.10.18",
    "pandas>=2.3.1",
    "psycopg[binary]>=3.2.9",
    "python-dotenv>=1.1.1",
    "sqlalchemy>=2.0.41",
    "tqdm>=4.67.1",
]
